--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -18,10 +18,13 @@ end
 group :test do
   gem 'cucumber-rails' 
   gem 'cucumber-rails-training-wheels'
+  gem 'rspec-rails'
 end
 group :production do
 #  gem 'pg'
 end
+
+gem 'themoviedb'
 
 # Gems used only for assets and not required
 # in production environments by default.
